# tressette

./: .gitignore  .nativelib  README.md  icon.png.import  icon.svg.import  icon_192.png.import  icon_432.png.import  icon_bg.png.import  icon_foreground.png.import  icon_inside.png.import  project.godot  splash_screen.png.import
addons/AdmobPlugin/: Admob.gd  AdmobPlugin.gd  plugin.cfg
addons/custom_native/: app-debug.aar  custom_native_plugin.gd  plugin.cfg
addons/firebase_plugin/: FirebasePlugin.gd  app-debug.aar  firebase_plugin.gd  plugin.cfg
addons/godot-firebase/: .env  android.env
addons/godotgif/: godotgif.gdextension
addons/nativelib-export/: nativelib_export_plugin.gd
android/: google-services.json
android/icons/: icon.png.import
android/plugins/: GodotGooglePlayBilling.2.0.0.release.aar  GodotGooglePlayBilling.gdap
apps/client/: .gitignore  README.md  icon.png.import  icon_bg.png.import  icon_foreground.png.import  packet.gd  packet.gd.uid  project.godot  splash_screen.png.import
apps/server_cpp/: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh  deploy-aws.sh  gen-protobuf.sh  note.txt  vcpkg.json
apps/server_cpp/config/: app_version.json  ranking.json  shop.json
apps/server_cpp/proto/: packet.pb.cpp  packet.pb.h  packet.proto
apps/server_cpp/src/: main.cpp  test_client.cpp
apps/server_cpp/src/auth/: auth_service.cpp  auth_service.hpp
apps/server_cpp/src/config/: app_config.cpp  app_config.hpp
apps/server_cpp/src/game/: game_constants.hpp  game_manager.cpp  game_manager.hpp  users_info_mgr.cpp  users_info_mgr.hpp
apps/server_cpp/src/game/match/: delayed_task_queue.hpp  match.cpp  match.hpp  match_player.cpp  match_player.hpp  match_registry.cpp  match_registry.hpp
apps/server_cpp/src/game/match/ai/: tressette_bot.cpp  tressette_bot.hpp
apps/server_cpp/src/game/match/modes/: match_player.cpp  match_player.hpp  tressette.cpp  tressette.hpp
apps/server_cpp/src/net/: client_session.cpp  client_session.hpp  cmd.hpp  game_client.cpp  game_client.hpp  listener.cpp  listener.hpp  packet_framing.hpp  router.cpp  router.hpp  server.cpp  server.hpp  session_registry.cpp  session_registry.hpp
apps/server_python_legacy/: README.md
assets/animations/: 1.png.import  2.png.import  3.png.import  4.png.import  5.png.import  anim_playing.tres  cup_anim.png.import
assets/fonts/: ARIAL.TTF.import  ARIALBD 1.TTF.import  ARIALBI 1.TTF.import  ARIALI.TTF.import  Reglisse_Fill.otf.import  heros_legend.ttf.import  super_pancake.ttf.import
assets/images/: ChatGPT Image Apr 4, 2025, 07_08_55 PM.png.import  New Project.png.import  add-friend.png.import  ads-blocker.png.import  avatar_01.png.import  back-button (1).png.import  back-button.png.import  bg_friend.png.import  btn_playnow.png.import  chat_icon (1).png.import  close-button.png.import  icon_chat.png.import  img_01.png.import  left-arrow_10117838.png.import  lobby.png.import  paper-plane.png.import  poker-table.png.import  rays.png.import  rounded_rect.png.import  search_icon.png.import  search_icon_small.png.import  shopping-cart.png.import  star.png.import  survey.png.import  table.png.import  waiting_light_bg.png.import  waiting_light_dark.png.import
assets/musics/: board_music.mp3.import  lobby_music.mp3.import  sette_mezzo_music.mp3.import
assets/sounds/: lose_sound.mp3.import  notification_alert_sound.mp3.import  shuffle_dealcard.mp3.import  sound_win_2.mp3.import  stop_sound.mp3.import  touch_sound.mp3.import  touch_sound.wav.import  win_congrat_sound.mp3.import  win_turn_sound.wav.import  your_turn_sound.wav.import
localization/: localize.csv  localize.csv.import
scenes/: BoardScene.tscn  ChooseTableScene.tscn  DevGUI.tscn  FriendScene.tscn  GameResultGUI.tscn  InitScene.tscn  LobbyScene.tscn  LoginScene.tscn  ShopScene.tscn
scenes/board/: AddScoreEffect.tscn  AnimCupWin.tscn  AvatarCircleNode.tscn  BetDetailGUI.tscn  Card.tscn  CreateTableGUI.tscn  EffectLightCard.tscn  EmoChat.tscn  EmoChatNode.tscn  EmoPlayer.tscn  FriendInviteGUI.tscn  FriendInviteNode.tscn  GameChatGUI.tscn  GameResultGUI.tscn  NapoliCardHighlight.tscn  PanelNapoliBtn.tscn  Player.tscn  PlayerResultNode.tscn  QuickChatNode.tscn  ResultRewardNode.tscn  ViewerNode.tscn  background_particles.tscn  light_03.png.import  star_particles.tscn
scenes/customer_service/: CustomerServiceGUI.tscn
scenes/effects/: TrailNode.tscn
scenes/friend/: FriendNode.tscn  FriendRecommendNode.tscn  FriendRequestNode.tscn  FriendRequestsGUI.tscn
scenes/guis/: AccountDeletion.tscn  GameChatGUI.tscn  GameResultGUI.tscn  GuideGUI.tscn  NotificationGUI.tscn  PaymentSuccessGUI.tscn  SettingsGUI.tscn  ShopGUI.tscn  ToastGUI.tscn  UserInfoGUI.tscn  WaitingGUI.tscn
scenes/inventory/: InventoryGUI.tscn  ItemNode.tscn  inventory_buy_option_node.gd  inventory_gui.gd  inventory_item_node.gd
scenes/level/: LevelGUI.tscn  LevelNode.tscn  LevelRewardNode.tscn  level_gui.gd  level_node.gd
scenes/loading/: LoadingScene.tscn
scenes/lobby/: AskForSupportGUI.tscn  AvatarFrame.tscn  ChangeUserNameGUI.tscn  FirstBuyGUI.tscn  FriendLobbyNode.tscn  JoinFbGroupGUI.tscn  JoinPrivateTable.tscn  LikeFanpageGUI.tscn  LinkAccountGUI.tscn  PickAvatarGUI.tscn  PickAvatarNode.tscn  PickCardGUI.tscn  RatingGUI.tscn  ReceiveGiftGUI.tscn  RewardNode.tscn  WatchAdsGUI.tscn  reward_node.gd
scenes/mail/: MailGUI.tscn
scenes/mission/: MissionGUI.tscn  MissionNode.tscn
scenes/ranking/: RankingGUI.tscn  RankingPlayer.tscn  RankingResult.tscn
scenes/scopa/: ScopaBoardScene.tscn
scenes/sette_mezzo/: SetteMezzoGuideGUI.tscn  SetteMezzoIntroGUI.tscn  SetteMezzoPlayer.tscn  SetteMezzoScene.tscn
scenes/shop/: ItemShopPack.tscn
scripts/: board_scene.gd  config.gd  dynamic_mgr.gd  effect_mgr.gd  fba.gd  friend_scene.gd  game_constants.gd  game_manager.gd  game_server_config.gd  lobby_scene.gd  login_mgr.gd  logs_mgr.gd  messaging.gd  player_info_mgr.gd  popup_mgr.gd  scene_manager.gd  signal_bus.gd  sound_manager.gd  storage_cache.gd  user_info_gui.gd
shaders/: light_highlight.gdshader  sprite_perspective_correction.gd
(+1374 files in other folders)
